add gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /src/server/services/odyssey/obj
+/src/server/services/odyssey/bin/Debug/netcoreapp3.1
