--- a/src/server/services/odyssey/appsettings.json
+++ b/src/server/services/odyssey/appsettings.json
@@ -14,8 +14,8 @@
   },
   "IdentityUrlExternal": "https://id.kb.braincities.co",
   "IdentityUrl": "https://identity-api",
-  "broker_ip": "3.127.125.49",
-  "client_username": "user",
-  "client_password": "braincities",
+  "broker_ip": "",
+  "client_username": "",
+  "client_password": "",
   "broker_port": "1883"
 }
