--- a/src/server/services/predictive/requirements.txt
+++ b/src/server/services/predictive/requirements.txt
@@ -1,7 +1,11 @@
 pandas==1.1.1
-seaborn==0.10.1
+sentence_transformers==0.3.7
+spacy==2.3.2
 matplotlib==3.2.2
-pydantic==1.6.1
+regex==2020.7.14
+scipy==1.5.2
 numpy==1.19.1
+pydantic==1.6.1
+seaborn==0.10.1
 fastapi==0.61.2
 scikit_learn==0.23.2
