add datawallet settings

--- a/src/server/services/odyssey/appsettings.json
+++ b/src/server/services/odyssey/appsettings.json
@@ -17,5 +17,9 @@
   "broker_ip": "",
   "client_username": "",
   "client_password": "",
-  "broker_port": "1883"
+  "broker_port": "1883",
+  "dw_private_key": "",
+  "dw_public_key": "",
+  "dw_receiverPublicDefaultKey": "",
+  "dw_receiverdefaultFolderId": ""
 }
