--- a/src/server/services/predictive/requirements.txt
+++ b/src/server/services/predictive/requirements.txt
@@ -1,5 +1,6 @@
+torch==1.5.0
 pandas==1.1.1
-sentence_transformers==0.3.7
+sentence_transformers==0.3.6
 spacy==2.3.2
 matplotlib==3.2.2
 regex==2020.7.14
